tests/js_error/source_locations/statement/for_of/get_iterator.js
var iterable = {
  [Symbol.iterator]() {
    throw new Error();
  }
}

for (var x of iterable) {}